--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password=123456
 #allow table's name like tblProduct
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.format_sql=true
+
+#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+#spring.jpa.properties.hibernate.globally_quoted_identifiers_skip_column_definitions = true
